--- a/CSS/index.css
+++ b/CSS/index.css
@@ -96,6 +96,7 @@ body{
 }
 .hero-section h1{
     font-family: "montserrat";
+    font-weight: bold;
     font-style: italic;
     text-align: right;
 }
@@ -541,6 +542,9 @@ body{
     position: absolute;
     width: 90%;
 }
+.sponsor-logo img{
+    max-width: 100%;
+}
 /* Policy */
 .policy{
     display: flex;
@@ -733,6 +737,12 @@ footer section{
         width: 100%;
         text-align: center
     }
+    .idea-text{
+        padding: 15px 30px;
+    }
+    .idea-text p{
+        text-align: center;
+    }
 
     /* Third */
     .third{
@@ -742,9 +752,10 @@ footer section{
         width: 100%;
     }
     .rules-text{
-        padding: 0 20px;
+        padding: 0 100px;
         text-align: center;
         min-height: 50%;
+        font-family: "montserrat";
     }
     .rules-text p{
         text-align: center;
@@ -768,6 +779,12 @@ footer section{
     .faqs{
         flex-direction: column;
         align-items: center;
+    }
+    .content-box{
+        font-weight: bold;
+    }
+    .faqs section{
+        width: 100%;    
     }
 
     /* Timeline */
@@ -794,5 +811,16 @@ footer section{
     .awards section{
         width: 100%;
         margin: 100px 0px;
+    }
+    /* Sponsor */
+    .sponsor-logo img{
+        max-width: 70%;
+    }
+    /* privacy policies */
+    .policy{
+        flex-direction: column;
+    }
+    .policy section{
+        width: 100%;
     }
 }
