--- a/CSS/index.css
+++ b/CSS/index.css
@@ -21,6 +21,10 @@ body{
     color: white;
     border-bottom: 1px solid  rgba(128, 128, 128, 0.237) ;
 }
+.navbar a{
+    text-decoration: none;
+    color: white;
+}
 .nav-links{
     display: flex;
     align-items: center;
@@ -33,6 +37,10 @@ body{
 .nav-links ul li{
     padding: 1rem;
     display: block;
+}
+.nav-links a{
+    text-decoration: none;
+   color:white ;
 }
 .Reg-btn button{
     background-image:linear-gradient(rgba(144, 58, 255, 1),rgba(212, 52, 254, 1),rgba(255, 38, 185, 1),rgba(254, 52, 185, 1));
@@ -272,6 +280,7 @@ body{
 .fourth{
     display: flex;
     border-bottom: 1px solid #FFFFFF2E;
+    padding-bottom: 40px;
 }
 .fourth section{
     width: 50%;
@@ -327,11 +336,15 @@ body{
     text-decoration: none;
     color: white;
 }
+/* faqs */
 .faqs{
     display: flex;
 }
 .faqs section{
     width: 50%;
+}
+.accordion span{
+    color: #D434FE;
 }
 .accordion-img img{
     max-width: 100%;
@@ -698,6 +711,11 @@ footer section{
 
 
 @media (max-width:760px) {
+    .hero-section h1{
+        font-size: 16px;
+        line-height: 39px;
+        text-align: center;
+    }
     .hero-text h1{
         font-size: 32px;
         line-height: 32px;
@@ -729,7 +747,7 @@ footer section{
 
     .hero-text{
         text-align: center;
-        padding: 0 100px;
+        padding: 0 50px;
         align-items: center;
         display: flex;
         flex-direction: column;
@@ -754,6 +772,10 @@ footer section{
     .idea-text p{
         text-align: center;
     }
+    .img-idea p{
+        left: 38%;
+        top: 40%;
+    }
 
     /* Third */
     .third{
@@ -763,10 +785,11 @@ footer section{
         width: 100%;
     }
     .rules-text{
-        padding: 0 100px;
+        padding: 0 60px;
         text-align: center;
         min-height: 50%;
-        font-family: "montserrat";
+        font-family: "montserrat" ,sans-serif;
+        font-weight: bold;
     }
     .rules-text p{
         text-align: center;
@@ -797,7 +820,12 @@ footer section{
     .faqs section{
         width: 100%;    
     }
-
+    .accordion h2{
+        text-align: center;
+    }
+    .accordion p{
+        text-align: center;
+    }
     /* Timeline */
     .timeline-content{
         flex-direction: column;
@@ -816,8 +844,9 @@ footer section{
         right: 100%;
     }
     .awards{
-        display: flex;
         flex-direction: column;
+        margin-top: 50px;
+        margin-bottom: 0px;
     }
     .awards section{
         width: 100%;
@@ -846,8 +875,6 @@ footer section{
     .policies{
         width: 80%;
         padding: 20px 50px;
-        margin: 0 20px;
-        margin-right: 50px;
     }
     /* Footer */
     footer{
