--- a/CSS/preloader.css
+++ b/CSS/preloader.css
@@ -49,3 +49,9 @@
     font-size: 24px;
     padding: 10px;
 }
+
+@media (max-width:760px){
+    .typewriter .text{
+        font-size: 50px;
+    }
+}
