--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -113,6 +113,7 @@ footer{
     display: flex;
     flex-wrap: wrap;
     background: rgba(16, 11, 32, 1);
+    color: #ffffff;
 }
 footer section{
     width: 30%;
